[package]
name = "sketchrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.1"
glam = "0.29"
memmap2 = { version = "0.9", optional = true }
speedy2d = { version = "2.1", git="https://github.com/kirinokirino/speedy2d", default-features = false, features = ["windowing-wayland", "windowing"], optional = true }
# image = { version = "0.24", features = ["png"], default-features = false }

[features]
default = ["imagesink"]

# records the video with ffmpeg
record = []

# use speedy2d for output
window = ["speedy2d"]

# use imagesink for output
imagesink = ["memmap2"]