[package]
name = "imagesink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap2 = "0.9"
speedy2d = { version = "2.1", git = "https://github.com/kirinokirino/speedy2d.git", default-features=false, features = ["windowing", "windowing-wayland", "windowing-x11", "image-loading"] }
glam = "0.29"
